fixad z-index

--- a/styles/sass/style.css
+++ b/styles/sass/style.css
@@ -1617,7 +1617,7 @@ nav {
   -webkit-transition: all 0.3s linear;
   transition: all 0.3s linear;
   background: rgba(34, 94, 57, 0.7);
-  z-index: 2;
+  z-index: 92;
 }
 
 .cart__content {
@@ -1627,7 +1627,7 @@ nav {
   width: 100%;
   height: 100%;
   overflow: scroll;
-  z-index: 10;
+  z-index: 100;
   background: #ece6d2;
   padding: 1.5rem;
   -webkit-transition: all 0.3s linear;
